# libjpeg

./: CMakeLists.txt
boxes/: filetypebox.cpp  floattonemappingbox.cpp  floattransformationbox.hpp  inversetonemappingbox.cpp  lineartransformationbox.hpp  matrixbox.hpp  mergingspecbox.cpp  parametrictonemappingbox.cpp
cmd/: bitmaphook.cpp  bitmaphook.hpp  defaulttmoc.cpp  defaulttmoc.hpp  encodea.cpp  encodea.hpp  encodeb.cpp  encodeb.hpp  encodec.cpp  filehook.cpp  iohelpers.cpp  iohelpers.hpp  main.cpp  reconstruct.cpp  tmo.cpp  tmo.hpp
codestream/: acrefinementscan.cpp  acsequentialscan.cpp  decoder.cpp  encoder.cpp  entropyparser.hpp  predictorbase.hpp  refinementscan.cpp  sequentialscan.cpp
coding/: huffmancoder.hpp  huffmanstatistics.hpp
colortrafo/: multiplicationtrafo.cpp
control/: hierarchicalbitmaprequester.cpp
interface/: bitmaphook.cpp  imagebitmap.cpp  imagebitmap.hpp  jpeg.cpp  jpgtypes.hpp  types.hpp
io/: bitstream.hpp  bytestream.cpp  bytestream.hpp  checksumadapter.cpp  decoderstream.cpp  iostream.cpp  memorystream.cpp  randomaccessstream.cpp
marker/: quantization.cpp  quantizationtable.cpp  scan.hpp
std/: string.hpp
test-sample/: decode.sh  encode.sh  hdr-decoder.sh  ldr-decoder.sh
test-sample/android/: decode-turbo.sh  decode.sh  hdr-decoder-turbo.sh  hdr-decoder.sh  ldr-decoder-turbo.sh  ldr-decoder.sh
tools/: checksum.hpp  environment.cpp  environment.hpp  numerics.cpp  priorityqueue.hpp  traits.hpp
